--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,7 +35,7 @@ test:
 
 about:
   home: https://github.com/booya-at/OpenGlider
-  license: GPL-3
+  license: GPL-3.0-or-later
   license_family: GPL
   license_file: LICENSE
   summary: paraglider design
