--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "openglider" %}
-{% set version = "0.06" %}
+{% set version = "0.0.6_cpp" %}
 
 package:
   name: {{ name }}
@@ -12,7 +12,6 @@ source:
 build:
   number: 0
   script: {{ PYTHON }} -m pip install . --no-deps -vv
-  noarch: python
 
 requirements:
   build:
