--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,8 +6,8 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/booya-at/OpenGlider/archive/{{ version }}.tar.gz
-  sha256: 2fdf80adf02e2f46fcd4fb3b4ec43863260ab1614e5dd18b0c78aae37893aa2b
+  git_url: https://github.com/booya-at/OpenGlider
+  git_tag: cpp
 
 build:
   number: 0
