--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,7 +15,8 @@ build:
 
 requirements:
   build:
-    - {{ compiler('c++') }}
+    - {{ compiler('cxx') }}
+    - {{ compiler('c') }}
     - cmake
     - pip
     - python
