--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,7 +31,7 @@ requirements:
     - parabem
     - meshpy
     - pyexcel-ezodf
-    - pyexcel_ods3
+    - pyexcel-ods3
     - matplotlib-base
 
 test:
