--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -20,7 +20,7 @@ build:
 requirements:
   host:
     - pip
-    - python ${{ python_min }}
+    - python ==${{ python_min }}
     - setuptools
   run:
     - python >=${{ python_min }}
@@ -38,9 +38,6 @@ tests:
   - python:
       imports:
         - openglider
-  - requirements:
-      run:
-        - python ${{ python_min }}
 
 about:
   license: GPL-3.0-or-later
